    - rename Dpkg::Source::CompressedFile in Dpkg::Compression::FileHandle
      and completely redesign its API
    - update Dpkg::Compression's API to use compression_* functions
      instead of granting direct access to variables, integrate
      there management of default compression
    - introduce Dpkg::Interface::Storable and update many modules
      to make use of it
  * Drop debian-maintainers from Suggests since it's obsolete, the
    corresponding keyring is in debian-keyring.
  * Merge support of symbol patterns in dpkg-gensymbols. Thanks to
    Modestas Vainius for his work (see further for more details).
  * Accept filename with spaces and colon in the output of objdump.
    Required so that dpkg-shlibdeps support such files properly.
    Thanks to Raphaël Geissert for the patch. Closes: #565712
  * When unpacking a "3.0 (quilt)" source package, tell quilt where
    patches are (to be) stored. Requires quilt >= 0.48-5 to work.
    Closes: #557619
  * Fix update-alternatives to not try to reinstall an unknown alternative
    when the link group is broken, instead switch to the best choice in
    automatic mode. Closes: #566406
  * Don't return duplicate bug numbers in Launchpad-Bugs-Fixed:.
    Thanks to Brian Murray <brian@ubuntu.com> for the report
    and the patch. Closes: #569618
  * Add $VERSION numbers to all perl modules. Closes: #465256
    1.00 and higher means that the API should be stable
  * While parsing diff's output, accept any sentence that contains the word
    differ (as specified by POSIX) to identify that binary files could not be
    compared. Closes: #570008
  * dpkg-gencontrol does no longer accept arch-specific dependencies in
    arch: all packages. Closes: #560071
  * dpkg-gencontrol no longer warns if a substitution variable provided by -V
    is not used (the warning is meant to catch unused substitutions coming
    from the file, those are package specific with debhelper). Closes: #557133