@@ -15,6 +15,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
       there management of default compression
     - introduce Dpkg::Interface::Storable and update many modules
       to make use of it
+    - update Dpkg::BuildOptions to provide an object-oriented interface
   * Drop debian-maintainers from Suggests since it's obsolete, the
     corresponding keyring is in debian-keyring.
   * Merge support of symbol patterns in dpkg-gensymbols. Thanks to
